<resources>
    <string name="app_name">YouMobile</string>
    <string name="app_version_title">Version</string>
    <string name="action_settings">Settings</string>
    <string name="hint_rfid_uid">UID (read only)</string>
    <string name="hint_rfid_event_id">Event ID</string>
    <string name="hint_rfid_status_blocked">Chip Blocked</string>
    <string name="hint_remaining_credits">REMAINING CREDITS:</string>
    <string name="hint_remaining_payed">PAYED BY CHIP:</string>
    <string name="hint_payed_by_cash">PAYED BY CASH:</string>
    <string name="hint_payed_by_card">PAYED BY CARD:</string>
    <string name="hint_cancelled_to_cash">CANCELLED TO CASH:</string>
    <string name="hint_cancelled_to_card">PAYED BY CARD:</string>
    <string name="hint_money_to_cash_out">Money to cash-out:</string>
    <string name="hint_rfid_credit_1">Credit 1</string>
    <string name="hint_rfid_credit_2">Credit 2</string>
    <string name="hint_rfid_payed_with">by</string>
    <string name="hint_rfid_visitor_role">Visitor Role</string>
    <string name="hint_rfid_backoffice_role">Backoffice Role</string>
    <string name="hint_rfid_voucher">Voucher</string>
    <string name="hint_rfid_voucher_id">Voucher Type</string>
    <string name="hint_rfid_area_id">Area ID (press to check out)</string>
    <string name="hint_rfid_area_time">Area access Time</string>
    <string name="hint_rfid_backofficerole_admin">Admin</string>
    <string name="hint_rfid_backofficerole_supervisor">Supervisor</string>
    <string name="hint_rfid_backofficerole_employee">Employee</string>
    <string name="hint_service_name">name</string>
    <string name="hint_gate_time_range_start">From:</string>
    <string name="hint_gate_time_range_end">To:</string>
    <string name="hint_gate_select">Choose a gate</string>
    <string name="hint_gate_permitted_visitor_roles">Permitted Ticktes</string>
    <string name="hint_shopping_cart_item_info">Item Info</string>
    <string name="hint_shop_total_price">0,00</string>
    <string name="hint_shop_total_qunatity">0</string>
    <string name="hint_shop_total_price_title">Total Price:</string>
    <string name="hint_shop_currency_symbol">EUR</string>
    <string name="hint_shop_item_description">item description</string>
    <string name="hint_shop_select_quantity">Choose the quantity</string>
    <string name="hint_shop_request_price_selection">Choose a price</string>
    <string name="hint_shop_currency_delimitter">.</string>
    <string name="hint_added_item_to_shopping_cart">Item added to Shopping cart:</string>
    <string name="hint_total_destinct_item_in_shopping_cart">Total</string>
    <string name="hint_total_items_in_shopping_cart">Total Items</string>
    <string name="hint_shopping_success">Successfully shopped</string>
    <string name="hint_shopping_failed">Shopping failed!</string>
    <string name="hint_shopping_failed_banned">Shopping failed! Chip is banned!</string>
    <string name="hint_shopping_cart_cleared">Shopping cart cleared.</string>
    <string name="hint_shopping_cart_empty">Shopping cart is empty. Please select an article before paying.</string>
    <string name="hint_shopping_insufficient_credit">Shopping failed! Insufficient credit.</string>
    <string name="hint_shopping_credit_exceeds_maximum">Loading failed! Credit exceeds limit.</string>
    <string name="hint_shopping_unload_value_exceeds_maximum">Cashout failed! Value exceeds limit.</string>
    <string name="hint_shopping_cancelation_not_possible">Cancelation failed!</string>
    <string name="hint_shopping_disabled_in_cancelation_mode">Function disabled in Cancelation mode</string>
    <string name="hint_shopping_change_to_cancelation_mode">Do you really want to change to Cancelation mode? Shopping card will be cleared.</string>
    <string name="hint_shopping_change_to_normalshop_mode">Do you really want to change to normal mode? Shopping card will be cleared.</string>
    <string name="hint_shopping_change_mode_denied">Permission denied! You have to be a supervisor to use the cancelation mode.</string>
    <string name="hint_shopping_cant_mix_article_types">This article can not be mixed with others!</string>
    <string name="hint_shopping_permit_load_2nd_currency">Loading Credit to 2nd currency is not permitted.</string>
    <string name="hint_shopping_cant_multi_unload">Can not unload Chip multiple times!</string>
    <string name="hint_shopping_max_value_selected">Maximum value to select is: </string>
    <string name="hint_nfc_tag_detected">NFC Tag detected ...</string>
    <string name="hint_log_sync_interfere">Waiting for other LogSync service to finish..</string>
    <string name="hint_log_sync_finished_successful">Finished LogSync</string>
    <string name="hint_log_sync_failed_interfere">Other LogSync service is still running. Pleas try again later.</string>
    <string name="notify_sync_log_running_title">Syncing first tx log</string>
    <string name="notify_sync_force_running_title">Syncing full tx log</string>
    <string name="notify_sync_blacklist_running_title">Refreshing Blacklist</string>
    <string name="notify_sync_running_message">: Started.\u0020</string>
    <string name="notify_sync_finished_success">: Finished.\u0020</string>
    <string name="notify_sync_next_attempt">: Next attempt</string>
    <string name="notify_sync_finished_fail">: Failed!\u0020</string>
    <string name="notify_logfile_too_big_title">Error: log file is to huge to process!</string>
    <string name="notify_logfile_connection_failed_message">: Connection failed!\u0020</string>
    <string name="hint_logfile_connection_failed_message">Connection failed!</string>
    <string name="hint_log_sync_failed">Failed to complete LogSync</string>
    <string name="hint_log_sync_cancelled">LogSync cancelled by user!</string>
    <string name="hint_log_sync_ok_local_failed">LogSync successful, but failed to delete local files!</string>
    <string name="hint_helpdesk_checkout_correction_denied">Checking out is not permitted.</string>
    <string name="hint_chip_invalid_crc">Error! Chip is damaged or corrupted!</string>
    <string name="hint_chip_invalid_app">Error! Invalid Chip Type!</string>
    <string name="hint_chip_invalid_eventID">Error! Chip is not for this event!</string>
    <string name="hint_chip_invalid_key">Error! Chip is invalid!</string>
    <string name="hint_nfc_disabled">NFC is disabled! Enable it to proceed.</string>
    <string name="hint_wifi_disabled">WiFi is disabled! Enable it to proceed.</string>
    <string name="hint_sync_not_possible">Synchronization could not proceed.</string>
    <string name="hint_sync_not_neccessery">All fine. No file to sync.</string>
    <string name="action_shop_submit_purchase">Buy</string>
    <string name="action_shop_submit_return">Return</string>
    <string name="action_shop_cancel_purchase">Clear</string>
    <string name="action_help">Help</string>
    <string name="action_info">Info</string>
    <string name="action_read">Read</string>
    <string name="action_write">Write</string>
    <string name="action_start_helpdesk">HelpDesk</string>
    <string name="action_start_store">Store</string>
    <string name="action_start_gate">Gate</string>
    <string name="action_start_debug">Debug</string>
    <string name="action_force_logsync">Force LogSync</string>
    <string name="action_start_shop">Shop</string>
    <string name="action_log_out">Log out</string>
    <string name="action_start_cashpoint">CashPoint</string>
    <string name="action_start_ticketexchange">Ticket</string>
    <string name="action_load_config">Load Config</string>
    <string name="action_reset_config">Reset Config</string>
    <string name="action_load_remote_config">Load remote config</string>
    <string name="action_helpdesk_change_mode_edit_chip">Edit Mode</string>
    <string name="action_helpdesk_change_mode_debug_chip">Debug Mode</string>
    <string name="action_load_settings_from_server">Refresh Settings</string>
    <string name="action_settings_load_chip">Load from Chip</string>
    <string name="action_settings_save_chip">Save to Chip</string>
    <string name="action_settings_refresh">Refresh</string>
    <string name="action_show_device_ip_title">Device ID</string>
    <string name="action_show_device_ip_localhost">not connected</string>
    <string name="action_show_device_ip_text">Show Device ID</string>
    <string name="action_show_device_memory_title">External Memory</string>
    <string name="action_show_shopping_cart">Show shopping cart</string>
    <string name="action_change_shopping_mode">Cancellation Mode</string>
    <string name="action_show_balance_check">Check Balance</string>
    <string name="action_shopping_select_payment_method_cash">Cash</string>
    <string name="action_shopping_select_payment_method_card">Card</string>
    <string name="action_shopping_select_payment_method_chip">Chip</string>
    <string name="action_shopping_select_voucher_method_yes">Chip (+voucher)</string>
    <string name="action_shopping_select_voucher_method_no">Chip (credits)</string>
    <string name="action_ticket_read_barcode">Scan Barcode</string>
    <string name="action_ticket_search_ticket">Search for ticket</string>
    <string name="title_shopping_cart">Shopping Cart</string>
    <string name="title_device_info">Device Info:</string>
    <string name="title_service_url">Service:</string>
    <string name="title_service_action">Action:</string>
    <string name="title_shop_item_select_purchase">Select items to purchase</string>
    <string name="title_shop_item_select_cancel">Select items to cancel</string>
    <string name="title_shop_total_price">Total:</string>
    <string name="title_shop_total_quantity">Quantity:</string>
    <string name="title_shop_select_payment_method">Select payment method</string>
    <string name="title_activity_select_action">Select Activity</string>
    <string name="title_activity_help_desk_main">HelpDesk</string>
    <string name="title_activity_cash_point_main">CashPoint Mode</string>
    <string name="title_activity_store_main">Shop Mode</string>
    <string name="title_activity_gate_main">Gate Mode</string>
    <string name="title_activity_debug_main">Debug Mode</string>
    <string name="title_activity_help_desk_details">Details</string>
    <string name="title_activity_balance_check">Balance Check</string>
    <string name="title_activity_reset_config">Reset Config</string>
    <string name="title_activity_help_desk_edit">Edit</string>
    <string name="title_activity_debug_details">Details</string>
    <string name="title_activity_debug_edit">Debug Mode</string>
    <string name="title_activity_settings_main">Settings</string>
    <string name="title_service_chip_reader">Chip Reader Service</string>
    <string name="title_update_chip_state">Update Chip state?</string>
    <string name="title_activity_gate_access">Gate Access</string>
    <string name="title_shopping_toggle_mode">Toggle Shopping Mode</string>
    <string name="hint_no_config_loaded">No config loaded!</string>
    <string name="hint_config_reset">Configuration will be reset</string>
    <string name="hint_config_reset_fail">Failed to reset configuration!</string>
    <string name="hint_helpdesk_update_chip_checkout">Set \'checked out\'?</string>
    <string name="hint_no_data">(no data)</string>
    <string name="hint_time">hh:mm</string>
    <string name="data_placeholder">no data</string>
    <string name="title_ticketxc_visitor_lastname">Last name</string>
    <string name="title_ticketxc_visitor_firstname">First name</string>
    <string name="hint_ticketxc_visitor_firstname">type in first name</string>
    <string name="hint_ticketxc_visitor_lastname">type in last name</string>
    <string name="hint_ticketxc_visitor_search">Fill in the form and click \'send\' to search online for the Ticket associate with the visitors name:</string>
</resources>