
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HelpDeskDetailsActivity" >

	<TextView
	    android:id="@+id/rfid_uid"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/hint_rfid_uid"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:typeface="monospace" />
    
    <EditText
        android:id="@+id/rfid_event_id"
        android:inputType="number"
        android:maxLength="8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_rfid_event_id" />

    <CheckBox
        android:id="@+id/rfid_status_blocked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_rfid_status_blocked" />

    <Spinner
        android:id="@+id/rfid_visitor_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/hint_rfid_visitor_role" />

    <EditText
        android:id="@+id/rfid_area_id"
        android:inputType="number"
        android:maxLength="8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_rfid_area_id" />  

			
	<EditText
	    android:id="@+id/rfid_area_time"
	    android:inputType="time"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingBottom="5dp"
	    android:hint="@string/hint_time"
	    android:textAppearance="?android:attr/textAppearanceMedium" />
		
    
    <EditText
        android:id="@+id/rfid_credit_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_rfid_credit_1"
        android:inputType="number"
        android:maxLength="10" />
    
    <EditText
        android:id="@+id/rfid_credit_2"
        android:inputType="number"
        android:maxLength="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_rfid_credit_2" />


</LinearLayout>
