<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".NameSearcherFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:text="@string/hint_ticketxc_visitor_search" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/title_ticketxc_visitor_firstname" />

    <EditText
        android:id="@+id/ticketxc_visitor_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_ticketxc_visitor_firstname"

        android:textSize="@dimen/dialog_fragment_font_size_big"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/title_ticketxc_visitor_lastname"/>

    <EditText
        android:id="@+id/ticketxc_visitor_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_ticketxc_visitor_lastname"
        android:textSize="@dimen/dialog_fragment_font_size_big"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/action_search_ticket"
        android:text="@string/action_ticket_search_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"/>

    </LinearLayout>
</LinearLayout>
